# frozen_map

./: Cargo.toml  Ideas.md  README.md
benches/: frozen_map.rs
examples/: Cargo.toml  frozen_map.rs
frozen-collections/: Cargo.toml
frozen-collections-core/: Cargo.toml
frozen-collections-core/src/: lib.rs
frozen-collections-core/src/analyzers/: hash_code_analyzer.rs  mod.rs  slice_key_analyzer.rs
frozen-collections-core/src/facades/: frozen_map.rs  frozen_map_tests.rs  frozen_set.rs  frozen_set_tests.rs  mod.rs
frozen-collections-core/src/macros/: frozen_map.rs  frozen_set.rs  mod.rs
frozen-collections-core/src/specialized_maps/: common_map.rs  hash_table.rs  integer_map.rs  integer_range_map.rs  iterators.rs  left_slice_map.rs  length_map.rs  mod.rs  right_slice_map.rs  scanning_map.rs
frozen-collections-core/src/specialized_sets/: common_set.rs  integer_range_set.rs  integer_set.rs  iterators.rs  left_slice_set.rs  length_set.rs  mod.rs  right_slice_set.rs  scanning_set.rs  set.rs  set_ops.rs
frozen-collections-core/src/traits/: len.rs  mod.rs  slice_hash.rs
frozen-collections-macros/src/: lib.rs
frozen-collections/src/: lib.rs
