[package]
name = "frozen-collections"
description = "Fast read-only collections."
readme.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true

[dependencies.frozen-collections-macros]
path = "../frozen-collections-macros"

[dependencies.frozen-collections-core]
path = "../frozen-collections-core"

[lints]
workspace = true
